--- a/RIH-GameLogic/RIH-GameLogic.csproj
+++ b/RIH-GameLogic/RIH-GameLogic.csproj
@@ -10,4 +10,14 @@
     <Version>1.0.2</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
+    <PackageReference Include="SQLite" Version="3.13.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repo\VersionOne\Interfaces\" />
+  </ItemGroup>
+
 </Project>
