--- a/RIH-GameLogic/RIH-GameLogic.csproj
+++ b/RIH-GameLogic/RIH-GameLogic.csproj
@@ -11,13 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="SQLite" Version="3.13.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repo\VersionOne\Interfaces\" />
   </ItemGroup>
 
 </Project>
